--- a/starter-kits/tailwind/source/default/tokens/font.css
+++ b/starter-kits/tailwind/source/default/tokens/font.css
@@ -6,12 +6,9 @@
   font-style: normal;
   font-weight: 400;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-regular.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-regular.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-regular.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-regular.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
 /* dm-sans-italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -19,12 +16,9 @@
   font-style: italic;
   font-weight: 400;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-italic.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-italic.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-italic.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-italic.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
 /* dm-sans-500 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -32,12 +26,9 @@
   font-style: normal;
   font-weight: 500;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-500.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-500.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-500.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-500.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
 /* dm-sans-500italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -45,12 +36,9 @@
   font-style: italic;
   font-weight: 500;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-500italic.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500italic.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-500italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-500italic.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-500italic.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-500italic.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
 /* dm-sans-700 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -58,12 +46,9 @@
   font-style: normal;
   font-weight: 700;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-700.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-700.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-700.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-700.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
 /* dm-sans-700italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -71,11 +56,7 @@
   font-style: italic;
   font-weight: 700;
   src: url('./fonts/dm-sans/dm-sans-v11-latin-700italic.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/dm-sans/dm-sans-v11-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700italic.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/dm-sans/dm-sans-v11-latin-700italic.svg#DMSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/dm-sans/dm-sans-v11-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/dm-sans/dm-sans-v11-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-700italic.woff') format('woff'), /* Modern Browsers */ url('./fonts/dm-sans/dm-sans-v11-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/dm-sans/dm-sans-v11-latin-700italic.svg#DMSans') format('svg'); /* Legacy iOS */
 }
 
 
@@ -87,12 +68,9 @@
   font-style: normal;
   font-weight: 400;
   src: url('./fonts/noto-serif/noto-serif-v21-latin-regular.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/noto-serif/noto-serif-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/noto-serif/noto-serif-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/noto-serif/noto-serif-v21-latin-regular.svg#NotoSerif') format('svg'); /* Legacy iOS */
+  src: url('./fonts/noto-serif/noto-serif-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/noto-serif/noto-serif-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-regular.woff') format('woff'), /* Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/noto-serif/noto-serif-v21-latin-regular.svg#NotoSerif') format('svg'); /* Legacy iOS */
 }
+
 /* noto-serif-italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -100,12 +78,9 @@
   font-style: italic;
   font-weight: 400;
   src: url('./fonts/noto-serif/noto-serif-v21-latin-italic.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/noto-serif/noto-serif-v21-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/noto-serif/noto-serif-v21-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-italic.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/noto-serif/noto-serif-v21-latin-italic.svg#NotoSerif') format('svg'); /* Legacy iOS */
+  src: url('./fonts/noto-serif/noto-serif-v21-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/noto-serif/noto-serif-v21-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-italic.woff') format('woff'), /* Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/noto-serif/noto-serif-v21-latin-italic.svg#NotoSerif') format('svg'); /* Legacy iOS */
 }
+
 /* noto-serif-700 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -113,12 +88,9 @@
   font-style: normal;
   font-weight: 700;
   src: url('./fonts/noto-serif/noto-serif-v21-latin-700.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/noto-serif/noto-serif-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700.svg#NotoSerif') format('svg'); /* Legacy iOS */
+  src: url('./fonts/noto-serif/noto-serif-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/noto-serif/noto-serif-v21-latin-700.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-700.woff') format('woff'), /* Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/noto-serif/noto-serif-v21-latin-700.svg#NotoSerif') format('svg'); /* Legacy iOS */
 }
+
 /* noto-serif-700italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -126,9 +98,5 @@
   font-style: italic;
   font-weight: 700;
   src: url('./fonts/noto-serif/noto-serif-v21-latin-700italic.eot'); /* IE9 Compat Modes */
-  src: url('./fonts/noto-serif/noto-serif-v21-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700italic.woff') format('woff'), /* Modern Browsers */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('./fonts/noto-serif/noto-serif-v21-latin-700italic.svg#NotoSerif') format('svg'); /* Legacy iOS */
+  src: url('./fonts/noto-serif/noto-serif-v21-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('./fonts/noto-serif/noto-serif-v21-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-700italic.woff') format('woff'), /* Modern Browsers */ url('./fonts/noto-serif/noto-serif-v21-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */ url('./fonts/noto-serif/noto-serif-v21-latin-700italic.svg#NotoSerif') format('svg'); /* Legacy iOS */
 }
