--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
@@ -40,5 +40,5 @@
 {% endfor %}
 
 <nav aria-label="footer">
-  {{ pattern('grid', {cells:cells, columns: cells|length, columns_width_4: '1/4', gutter: 'default' }, null ) }}
+  {{ pattern('grid', {cells:cells}, cells|length ~ '_column' ) }}
 </nav>
