--- a/starter-kits/tailwind/source/default/patterns/04-templates/basic/basic.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/basic/basic.twig
@@ -12,6 +12,9 @@
 #}
 {% set attributes = attributes|default(create_attribute()) %}
 
+{#
+  Internal
+#}
 {% set content %}{% block content %}{{ content }}{% endblock %}{% endset %}
 {% set headline %}{% block headline %}{{ headline }}{% endblock %}{% endset %}
 
