--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
@@ -1,12 +1,12 @@
 {#
   Attributes
 #}
-{% set parent_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_list_classes')) %}
-{% set parent_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_list_item_classes')) %}
-{% set parent_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_link_classes')) %}
-{% set child_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_list_classes')) %}
-{% set child_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_list_item_classes')) %}
-{% set child_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_link_classes')) %}
+{% set root_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'root')['list_classes']) %}
+{% set root_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'root')['list_item_classes']) %}
+{% set root_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'root')['link_classes']) %}
+{% set ancestor_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'ancestors')['list_classes']) %}
+{% set ancestor_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'ancestors')['list_item_classes']) %}
+{% set ancestor_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'ancestors')['link_classes']) %}
 
 {#
   Template
@@ -14,19 +14,18 @@
 {% set cells = [] %}
 {% for item in items %}
   {% set cell %}
-    <ul role="menu" {{ parent_list_attributes }}>
-      <li role="none" {{ parent_list_item_attributes }}>
+    <ul role="menu" {{ root_list_attributes }}>
+      <li role="none" {{ root_list_item_attributes }}>
         {# -- Main parent item w/o link  -- #}
-        <a href="#" {{ parent_link_attributes }}>
+        <a href="#" {{ root_link_attributes }}>
           {{ item.title }}
         </a>
-
         {# -- Child items -- #}
         {% if item.below %}
-          <ul role="menu" {{ child_list_attributes }}>
+          <ul role="menu" {{ ancestor_list_attributes }}>
             {% for child in item.below %}
-              <li role="none" {{ child_list_item_attributes }}>
-                <a href="{{ child.url }}" {{ child_link_attributes }}>
+              <li role="none" {{ ancestor_list_item_attributes }}>
+                <a href="{{ child.url }}" {{ ancestor_link_attributes }}>
                   {{ child.title }}
                 </a>
               </li>
@@ -38,7 +37,6 @@
   {% endset %}
   {% set cells = cells|merge([cell]) %}
 {% endfor %}
-
 <nav aria-label="footer">
   {{ pattern('grid', {cells:cells, columns: cells|length, columns_width_4: '1/4', gutter: 'default' }, null ) }}
 </nav>
